<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/status_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/status"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/specy_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/character_status_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/status_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_textView"
        app:layout_constraintTop_toTopOf="@+id/status_textView" />

    <TextView
        android:id="@+id/specy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/specy"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gender_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_textView" />

    <TextView
        android:id="@+id/character_specy_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/specy_textView"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/specy_textView" />

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/gender"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/origin_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specy_textView" />

    <TextView
        android:id="@+id/character_gender_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/gender_textView"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/gender_textView" />

    <TextView
        android:id="@+id/origin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/origin"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location_textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_textView" />

    <TextView
        android:id="@+id/character_origin_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/origin_textView"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/origin_textView" />

    <TextView
        android:id="@+id/location_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/location"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/episodes_textView"
        app:layout_constraintEnd_toStartOf="@+id/character_location_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin_textView" />

    <TextView
        android:id="@+id/character_location_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/location_textView1"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/location_textView1" />

    <TextView
        android:id="@+id/episodes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/episodes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createdAt_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_textView1" />

    <TextView
        android:id="@+id/character_episodes_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/episodes_textView"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/episodes_textView" />

    <TextView
        android:id="@+id/createdAt_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="end"
        android:text="@string/created_at_in_api"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episodes_textView" />

    <TextView
        android:id="@+id/character_createdAt_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/createdAt_textView"
        app:layout_constraintEnd_toEndOf="@+id/character_status_textView"
        app:layout_constraintStart_toStartOf="@+id/character_status_textView"
        app:layout_constraintTop_toTopOf="@+id/createdAt_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>